--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
       <title>Level {{levelId}}</title>
       <script src="https://code.jquery.com/jquery.js"></script>
       <script src="/phaser.min.js"></script>
-      <script src="/game-files/level-{{levelId}}/level.js"></script>
+      <script src="/game-files/levels/level-{{levelId}}/level.js"></script>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
    <body class="tile">
