Updated sprint, created game over screen, restart function, etc.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,7 @@
 <head>
    <meta charset="UTF-8">
       <title>Level {{levelId}}</title>
+      <link rel="stylesheet" href="/notStyle.css">
       <script src="https://code.jquery.com/jquery.js"></script>
       <script src="/phaser.min.js"></script>
       <script src="/game-files/levels/level-{{levelId}}/level.js"></script>
