--- a/public/notStyle.css
+++ b/public/notStyle.css
@@ -12,3 +12,55 @@ nav {
 body {
     background: black;
 }
+
+#death {
+	width: 1280px;
+	height: 720px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+}
+
+#deathMenu {
+	width: 750px;
+	height: 480px;
+	margin: auto;
+	margin-top: 120px;
+  border-radius: 40px;
+  background: red;
+}
+
+#gameover {
+	height: auto;
+	padding-top: 60px;
+	background: none;
+}
+
+#gameover p {
+	margin-top: 0px;
+	margin-bottom: 0px;
+	font-size: 160px;
+	font-family: 'Black Ops One', cursive;
+	line-height: 120px;
+	text-align: center;
+	text-shadow: 5px 5px #000000;
+	color: #ffffff;
+}
+
+#choices {
+	margin: 0 200px;
+	padding-top: 60px;
+	background: none;
+}
+
+#choices button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
