--- a/public/notStyle.css
+++ b/public/notStyle.css
@@ -66,7 +66,7 @@ input{
 	background: none;
 }
 
-#gameover p {
+#gameover  p {
 	margin-top: 0px;
 	margin-bottom: 0px;
 	font-size: 160px;
@@ -83,7 +83,7 @@ input{
 	background: none;
 }
 
-#choices button {
+#choices #selectText button {
   background-color: #4CAF50; /* Green */
   border: none;
   color: white;
@@ -92,4 +92,11 @@ input{
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+}
+
+#levelLink {
+	padding-right: 5%;
+	padding-left: 5%;
+	font-size: 20px;
+	color: gold;
 }
