--- a/public/notStyle.css
+++ b/public/notStyle.css
@@ -6,6 +6,7 @@ body {
 }
 
 #starwars-text{
+	font-size: 50px;
   width: 600px;
   margin: 0 auto;
   transform-style: preserve-3d;
@@ -15,7 +16,7 @@ body {
 }
 
 #starwars-text.moving{
-  transform:  translateY(-100px) rotateX(20deg) translateY(-2000px);
+  transform:  translateY(-100px) rotateX(20deg) translateY(10px);
 }
 
 h4 {
