--- a/views/level.handlebars
+++ b/views/level.handlebars
@@ -31,3 +31,17 @@
 	</div>
 	</div>
 </div>
+
+<div id="victory" style="display:none">
+	<div id="victoryMenu">
+		<div id="win">
+			<p> GAME </p>
+			<p> OVER </p>
+		</div>
+
+		<div id="choices">
+			<button id="restart">RESTART GAME</button>
+			<button id="menu" href="/">MAIN MENU</button>
+	</div>
+	</div>
+</div>
