--- a/public/notStyle.css
+++ b/public/notStyle.css
@@ -119,10 +119,14 @@ input{
 	color: #ffffff;
 }
 
-#choices {
+.choices {
 	margin: 0 200px;
 	padding-top: 60px;
 	background: none;
+}
+
+.choices  a {
+/*BUTTON STUFF*/
 }
 
 #choices #selectText button {
