--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,7 @@
 <head>
    <meta charset="UTF-8">
       <title>Level {{levelId}}</title>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
       <link rel="stylesheet" href="/notStyle.css">
       <script src="https://code.jquery.com/jquery.js"></script>
       <script src="/phaser.min.js"></script>
