ready to deploy?

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,7 @@
       <script src="https://code.jquery.com/jquery.js"></script>
       <script src="/phaser.min.js"></script>
       <script src="/game-files/levels/level-{{levelId}}/level.js"></script>
+      <script type="text/javascript" src="/createUser.js"></script>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
    <body class="tile">
